Fix whitelist extensions + Add header X-Content-Type-Options