@@ -10,6 +10,7 @@ import lombok.AllArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.hibernate.Hibernate;
 import org.kohsuke.github.GHContent;
 import org.springframework.stereotype.Service;
@@ -22,14 +23,20 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Locale;
 import java.util.Optional;
+import java.util.regex.Pattern;
 
+import static com.axonivy.market.constants.CommonConstants.IMAGE_EXTENSION;
 import static com.axonivy.market.constants.PreviewConstants.PREVIEW_DIR;
+import static com.axonivy.market.constants.RegexConstants.SAFE_PATH_PATTERN;
 
 @Service
 @Log4j2
 @AllArgsConstructor
 public class ImageServiceImpl implements ImageService {
+
+  private static final Pattern IMAGE_EXTENSION_PATTERN = Pattern.compile(IMAGE_EXTENSION);
 
   private final ImageRepository imageRepository;
   private final FileDownloadService fileDownloadService;
@@ -61,7 +68,7 @@ public class ImageServiceImpl implements ImageService {
         List<Image> imagesToDelete = existedImages.subList(1, existedImages.size());
         imageRepository.deleteAll(imagesToDelete);
       }
-      return existedImages.get(0);
+      return existedImages.getFirst();
     }
 
     String currentImageUrl = GitHubUtils.getDownloadUrl(ghContent);
@@ -110,13 +117,21 @@ public class ImageServiceImpl implements ImageService {
 
   @Override
   public byte[] readPreviewImageByName(String imageName) {
+    if (!isAllowedPreviewImageName(imageName)) {
+      log.info("#readPreviewImageByName: Rejected preview file name {}", imageName);
+      return new byte[0];
+    }
+
     var previewPath = Paths.get(PREVIEW_DIR);
     if (!Files.exists(previewPath) || !Files.isDirectory(previewPath)) {
       log.info("#readPreviewImageByName: Preview folder not found");
+      return new byte[0];
     }
+
     try {
       Optional<Path> imagePath = Files.walk(previewPath)
           .filter(Files::isRegularFile)
+          .filter(path -> isAllowedPreviewImageName(path.getFileName().toString()))
           .filter(path -> path.getFileName().toString().equalsIgnoreCase(imageName))
           .findFirst();
       if (imagePath.isEmpty()) {
@@ -130,6 +145,13 @@ public class ImageServiceImpl implements ImageService {
       log.error("#readPreviewImageByName: Error when read preview image {}: {}", imageName, e.getMessage());
       return new byte[0];
     }
+  }
+
+  private boolean isAllowedPreviewImageName(String imageName) {
+    if (StringUtils.isBlank(imageName) || !SAFE_PATH_PATTERN.matcher(imageName).matches()) {
+      return false;
+    }
+    return IMAGE_EXTENSION_PATTERN.matcher(imageName.toLowerCase(Locale.getDefault())).matches();
   }
 
 }
